--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,5 @@
             </div>
         </div>
     </div>
-    <div class="row mt-4">
-        <div class="col-lg-6">
-            <app-nueva-reserva></app-nueva-reserva>
-        </div>
-        <div class="col-lg-6">
-            <app-listar-reservas></app-listar-reservas>
-        </div>
-    </div>
+    <router-outlet></router-outlet>
 </div>
